projects/pce/apps/redirect/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-pce
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.alpha.kubernetes.io/target: "209.16.157.32"
    nginx.ingress.kubernetes.io/rewrite-target: "https://portycommunityenergy.wordpress.com/"
spec:
  tls:
    - hosts:
        - www.pce.org.uk
      secretName: ingress-www-pce-tls
  ingressClassName: nginx
  rules:
    - host: "www.pce.org.uk
